# Projeto-Final-DSP

./: .env  README.MD  populate_db.py  pyproject.toml
app/: config.py  database.py  main.py
app/models/: categoria.py  grupo.py  memoria.py  pessoa.py
app/routers/: categoria.py  grupo.py  memoria.py  pessoa.py
