[project]
name = "api"
version = "0.1.0"
description = "API para gerenciar persistência de dados usando MongoDB"
requires-python = ">=3.10"

[tool.poetry]
name = "api"
version = "0.1.0"
description = "API para gerenciar persistência de dados usando MongoDB"
package-mode = false  # Desabilita o modo de empacotamento

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "0.34.0"
pydantic = "^2.10.6"
python-dotenv = "1.0.1"
beanie = "^1.29.0"
motor = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"